modify statistic fund